<resources>
    <string name="app_name">Wagba</string>
    <string name="sign_up">Sign up</string>
    <string name="fname_sign_up">First Name</string>
    <string name="lname_sign_up">Last Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password_sign_up">Confirm Password</string>
    <string name="gender_sign_up">Gender</string>
    <string name="birthday_sign_up">Date of birth</string>
    <string name="terms_sign_up">By creating account, you accept term of use</string>
    <string name="creation_sign_up">Create account</string>
    <string name="haveAccount_sign_up">Already have an account?</string>
    <string name="sign_in">Sign in</string>
    <string name="Home">Home</string>
    <string name="Search">Search</string>
    <string name="Offers">Offers</string>
    <string name="Settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="search_hint">Search restaurants</string>
    <string name="offer_initial_title">Get 20 EGP off On Selected Items</string>
    <string name="offer_initial_date">Valid until</string>
    <string name="initial_restaurant">KFC</string>
    <string name="account_info">Account info</string>
    <string name="settings_sign_out">Sign out</string>
    <string name="settings_language">Language</string>
    <string name="settings_notifications">Notifications</string>
    <string name="change_birthdate">Change birthdate</string>
    <string name="change_email">Change email</string>
    <string name="saved_addresses">Saved Addresses</string>
    <string name="initial_eta">ETA: 20 mins</string>
    <string name="initial_phase">Verifying</string>
    <string name="current_order">Current Order</string>
    <string name="recommended_restaurants">Recommended Restaurants</string>
    <string name="frequently_ordered">Frequently Ordered</string>
    <string name="order_history">Order History</string>
    <string name="initial_order_number">Order Id: 210</string>
    <string name="initial_order_date">Ordered at 10 Oct 2022, 7:51 PM</string>
    <string name="total_price_details">300 EGP</string>
    <string name="initial_item_name">BBQ Rizo</string>
    <string name="initial_item_price">39 EGP</string>
    <string name="price">Price</string>
    <string name="total_price">Total Price</string>
    <string name="initial_total_price"></string>
    <string name="taxes">x1.14 (Taxes)</string>
    <string name="initial_taxes_val"></string>
    <string name="delivery_fee">+10 EGP (Delivery Fee)</string>
    <string name="initial_final_cost"></string>
    <string name="initial_quantity">Quantity: 2</string>
    <string name="initial_total_item_price"></string>
    <string name="initial_final_price">Total price is 0.00 EGP</string>
    <string name="gate_txt">Choose a gate</string>
    <string name="confirm_order">Confirm Order</string>
    <string name="initial_hello">Hello User</string>
    <string name="not_registered">Not registered yet?</string>
    <string name="sign_up_here">Sign up here</string>
    <string name="initial_item_quantity">0</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delivery_txt">Choose delivery time</string>
    <string name="initial_history_phase">Delivered</string>
    <string name="change_first_name">Change first name</string>
    <string name="change_last_name">Change last name</string>
    <string name="change_gender">Change gender</string>
    <string name="language">Language</string>
    <string name="Prefilled_Email">test@test.com</string>
    <string name="Prefilled_Password">Mazen12</string>
</resources>