<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/Home"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="@string/Home"/>
    <item
        android:id="@+id/Search"
        android:enabled="true"
        android:icon="@drawable/ic_search"
        android:title="@string/Search"/>
    <item
        android:id="@+id/order_history"
        android:enabled="true"
        android:icon="@drawable/ic_history"
        android:title="@string/order_history"/>
    <item
        android:id="@+id/Offers"
        android:enabled="true"
        android:icon="@drawable/ic_shopping_bag"
        android:title="@string/Offers"/>
    <item
        android:id="@+id/Settings"
        android:enabled="true"
        android:icon="@drawable/ic_settings"
        android:title="@string/Settings"/>
</menu>