<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        app:cardBackgroundColor="@color/Geyser"
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:padding="10dp"
            android:orientation="horizontal">

            <LinearLayout
                android:padding="5dp"
                android:gravity="center"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/order_status"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/initial_history_phase"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/order_id"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:textSize="12sp"
                    android:text="@string/initial_order_number"
                    />

                <TextView
                    android:id="@+id/ordered_date"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:textSize="12sp"
                    android:text="@string/initial_order_date" />

                <TextView
                    android:id="@+id/order_total_price"
                    android:layout_marginRight="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:textColor="@color/dawn_pink"
                    android:gravity="center"
                    android:text="@string/total_price_details"
                    android:background="@color/Denim"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/order_image"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.7"
                    app:srcCompat="@drawable/ic_shopping_bag" />

                <TextView
                    android:id="@+id/order_restaurant"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.1"
                    android:gravity="center"
                    android:text="@string/initial_restaurant"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>