<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/Geyser"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/account_info"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/textlines"
            android:gravity="center|start"
            android:text="@string/account_info"
            android:textColor="@color/Denim"
            android:textSize="14sp"
            app:drawableEndCompat="@drawable/ic_arrow_right" />

        <TextView
            android:id="@+id/change_email"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="@drawable/textlines"
            android:gravity="center|start"
            android:text="@string/change_email"
            android:textColor="@color/Denim"
            android:textSize="14sp"
            app:drawableEndCompat="@drawable/ic_arrow_right" />

        <TextView
            android:id="@+id/change_password"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="@drawable/textlines"
            android:gravity="center|start"
            android:text="@string/change_password"
            android:textColor="@color/Denim"
            android:textSize="14sp"
            app:drawableEndCompat="@drawable/ic_arrow_right" />

        <TextView
            android:id="@+id/notifications"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:background="@drawable/textlines"
            android:gravity="center|start"
            android:text="@string/settings_notifications"
            android:textColor="@color/Denim"
            android:textSize="14sp"
            app:drawableEndCompat="@drawable/ic_arrow_right" />

        <TextView
            android:id="@+id/language"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:background="@drawable/textlines"
            android:gravity="center|start"
            android:text="@string/settings_language"
            android:textColor="@color/Denim"
            android:textSize="14sp"
            app:drawableEndCompat="@drawable/ic_arrow_right" />

        <TextView
            android:id="@+id/sign_out_btn"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:gravity="center|start"
            android:text="@string/settings_sign_out"
            android:textColor="@color/Denim"
            android:textSize="14sp"
            app:drawableEndCompat="@drawable/ic_arrow_right" />

    <!--    Empty text field to compensate action bar"-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:gravity="center|start"
        android:text=""
        android:textColor="@color/Denim"
        android:textSize="14sp"
         />


</LinearLayout>