<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <androidx.cardview.widget.CardView
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        app:cardBackgroundColor="@color/Geyser"
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:padding="10dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/payment_item_image"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.9"
                    app:srcCompat="@drawable/kfc_rizo" />
            </LinearLayout>

            <LinearLayout
                android:gravity="center"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.2"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/payment_item_name"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/initial_item_name"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:textColor="@color/black"/>

                    <TextView
                        android:id="@+id/payment_item_quantity"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/initial_quantity"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:textColor="@color/black"/>

            </LinearLayout>
            <LinearLayout
                android:gravity="center"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.2"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/payment_item_price_tag"
                    android:gravity="center"
                    android:layout_height="0dp"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:text="@string/price" />
                <TextView
                    android:id="@+id/payment_item_price"
                    android:gravity="center"
                    android:layout_height="0dp"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:text="@string/initial_item_price" />
            </LinearLayout>
            <LinearLayout
                android:gravity="center"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.2"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/total_price_tag"
                    android:gravity="center"
                    android:layout_height="0dp"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:textColor="@color/Denim"
                    android:text="@string/total_price" />
                <TextView
                    android:id="@+id/payment_item_total_price"
                    android:gravity="center"
                    android:layout_height="0dp"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:textColor="@color/Denim"
                    android:text="@string/initial_total_item_price" />
            </LinearLayout>


        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>