<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Geyser"
    >

    <TextView
        android:id="@+id/sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:fontFamily="@font/dancing_script"
        android:gravity="center"
        android:text="@string/sign_in"
        android:textColor="@color/Denim"

        android:textSize="50sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="100dp"
            android:layout_weight="2"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/email_sign_up"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/open_sans"
                    android:gravity="center|left"
                    android:text="@string/email"
                    android:textColor="@color/Denim"
                    android:textSize="18sp"
                    />

                <TextView
                    android:id="@+id/password_sign_up"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/open_sans"
                    android:gravity="center|left"
                    android:text="@string/password"
                    android:textColor="@color/Denim"
                    android:textSize="18sp"
                    />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:divider="@drawable/empty_tall_divider2"
                android:orientation="vertical"
                android:showDividers="middle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_val_sign_in"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_edittext"
                    android:fontFamily="@font/open_sans"
                    android:gravity="center|left"
                    android:inputType="textEmailAddress"
                    android:text="@string/Prefilled_Email"
                    android:paddingLeft="20dp"
                    android:textColor="@color/white"
                    android:textSize="18sp"/>

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_val_sign_in"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_edittext"
                    android:fontFamily="@font/open_sans"
                    android:gravity="center|left"
                    android:inputType="textPassword"
                    android:text="@string/Prefilled_Password"
                    android:paddingLeft="20dp"
                    android:textColor="@color/white"
                    android:textSize="18sp"/>

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/sign_in_btn"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="30dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:text="@string/sign_in" />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/google_sign_in_btn"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/not_registered"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/sign_up_here"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:text="@string/sign_up_here"
                android:textColor="@color/Denim"
                android:textStyle="bold"
                android:textSize="18sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="8"
            android:orientation="vertical">
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>