<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        app:cardBackgroundColor="@color/Geyser"
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:padding="10dp"
            android:orientation="horizontal">

            <LinearLayout
                android:gravity="center"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/offer_title"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/offer_initial_title"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/offer_date"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="bottom"
                    android:text="@string/offer_initial_date" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">
                    <ImageView
                        android:id="@+id/offer_image"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="0.8"
                        app:srcCompat="@drawable/ic_shopping_bag" />
                    <TextView
                        android:id="@+id/offer_restaurant"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="0.2"
                        android:gravity="center"
                        android:text="@string/initial_restaurant"
                        android:textStyle="bold"
                        android:textColor="@color/black"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>