<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:animateLayoutChanges="true"
    android:isScrollContainer="true">

    <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/Geyser"
    android:padding="10dp"
    android:orientation="vertical">

        <LinearLayout
            android:id="@+id/current_order_layout"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            >
            <TextView
                android:id="@+id/current_order_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="@color/Denim"
                android:text="@string/current_order"
                />

            <androidx.cardview.widget.CardView
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp"
                app:cardBackgroundColor="@color/Geyser"
                android:layout_margin="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/ordered_restaurant_img"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        app:srcCompat="@drawable/kfc" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        >

                        <TextView
                            android:id="@+id/ordered_restaurant"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:gravity="center_horizontal"
                            android:text="@string/initial_restaurant"
                            android:textColor="@color/black"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/ordered_phase"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:gravity="center_horizontal"
                            android:text="@string/initial_phase"
                            android:textColor="@color/black"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/ordered_eta"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:gravity="center_horizontal"
                            android:text="@string/initial_eta"
                            android:textColor="@color/black"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/frequently_ordered_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/current_order_layout"
            >
            <TextView
                android:id="@+id/frequently_ordered_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="@color/Denim"
                android:text="@string/frequently_ordered"
                />
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/frequentRecyclerView"
                android:layout_margin="2dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/recommended_restaurant_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/frequently_ordered_layout"
            >
            <TextView
                android:id="@+id/recommended_restaurant_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="@color/Denim"
                android:text="@string/recommended_restaurants"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recommendedRecyclerView"
                android:layout_margin="2dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                />
        </LinearLayout>

        <!--    Empty text field to compensate action bar"-->
<!--    <LinearLayout-->
<!--        android:id="@+id/dummy_view"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:orientation="horizontal"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@id/recommended_restaurant_layout"-->
<!--        />-->

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>